# hibiki

./: Cargo.toml  README.md  css_gen_test  flake.nix
.github/workflows/: ci.yml
benches/: font_loading.rs
nix/: package.nix  shell.nix
src/: app.rs  lib.rs  main.rs  tray.rs
src/application/: audio_dispatcher.rs  config_service.rs  feedback_service.rs  mod.rs  routing.rs  typography_service.rs
src/assets/sounds/apex-pro-tkl-v2_Akira/: config.json
src/assets/sounds/mx-speed-silver/: config.json
src/assets/sounds/nk-cream/: config.json
src/assets/sounds/tealios-v2_Akira/: config.json
src/compositor/: niri.rs  sway.rs
src/config/: mod.rs
src/domain/: commands.rs  config.rs  events.rs  mod.rs  state.rs
src/infrastructure/: audio.rs  audio_test.rs  font_provider.rs  hotkey.rs  mod.rs  settings_repository.rs
src/input/: device.rs  keymap.rs  layout.rs  listener.rs  mod.rs
src/presentation/: mod.rs  overlay_manager.rs
src/presentation/components/: mod.rs  osd_bubble.rs
src/ui/: bubble.rs  display.rs  drag.rs  icon_renderer.rs  launcher.rs  mod.rs  mouse_cursor.rs  settings.rs  window.rs
style/: bubble.css  defaults.css  osd.css  overlay.css  settings.css
tests/: config_migration.rs  settings_logic.rs
