[package]
name = "keystroke"
version = "0.1.5"
edition = "2021"
authors = ["linuxmobile"]
description = "Keystroke - Most beautiful Keystroke visualizer"
license = "MIT"
repository = "https://github.com/linuxmobile/keystroke"
keywords = ["wayland", "gtk4", "layer-shell", "keyboard", "screencast"]
categories = ["gui", "visualization"]

[package.metadata.nix]
build-inputs = ["libjack2"]

[dependencies]
# GTK4 and Layer Shell
gtk4 = { version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.4"
# Input handling
evdev = "0.12"
nix = { version = "0.29", features = ["fs", "poll"] }
xkbcommon = "0.9"
# Async runtime for input
tokio = { version = "1", features = ["rt", "sync", "macros"] }
async-channel = "2.3"
# Error handling
anyhow = "1.0"
thiserror = "2.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
# System tray
ksni = "0.2"
serde_json = "1.0.149"
tempfile = "3.24.0"
font-kit = "0.14.3"
once_cell = "1.21.3"
cpal = { version = "0.16", features = ["jack"] }
rodio = "0.21.1"
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_tokio"] }
hound = "3.5.1"
tempfile = "3.24.0"

[[bench]]
name = "font_loading"
harness = false
